# manifoldbt-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
src/manifoldbt_mcp/: __init__.py  config_helpers.py  dsl.py  reference.py  server.py  store.py
tests/: test_server.py
